gateway/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://sample-auth-service.default.svc.cluster.local:90/auth/session"
    nginx.ingress.kubernetes.io/auth-response-headers: "AUTH-USER,AUTH-SESSION"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - backend:
            serviceName: sample-rest-service
            servicePort: 80
          pathType: Prefix
          path: /user
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: sample-auth-service
          servicePort: 90
        path: /auth/login
      - backend:
          serviceName: sample-auth-service
          servicePort: 90
        path: /auth/session
